--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -3,5 +3,8 @@
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
+<h3>@ViewData["Teacher"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<address>
+    <strong>More Information: </strong> <a href="http://www.educandoweb.com.br">EducandoWeb.com</a>
+</address>
