--- a/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -47,12 +47,11 @@
                     R$ @Html.DisplayFor(modelItem => item.BaseSalary),00
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-router-id="@item.Id">Edit</a>
-                    <a asp-action="Details" asp-router-id="@item.Id">Details</a>
-                    <a asp-action="Delete" asp-router-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    <a asp-action="Delete" asp-route-Id="@item.Id">Delete</a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
-
